Related: tdf#152454 pick something suitable for dark mode Inactive tab color

on Windows

Change-Id: I400ca7d8c0c541977b574ae08f08aa5f28a2e3d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144054
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>